# Modkeeper

./: .gitignore  CLAUDE.md  MOCK_DATA.md  README.md  components.json  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.config/: tsconfig.app.json  tsconfig.node.json
.github/workflow/: publish.yml
.github/workflows/: publish.yml
config/: tsconfig.app.json  tsconfig.node.json
locales/: en-US.po
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  core.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/commands/: global.rs  instance.rs  library.rs  test.rs
src-tauri/src/config/: global.rs
src-tauri/src/core/: cache.rs  cleanup.rs  decompression.rs  deployment.rs  dto_builder.rs  instance.rs  library.rs  library_service.rs  linker.rs  mod_backup.rs  mod_documentation.rs  mod_fs.rs  mod_manager.rs  mod_stager.rs  registry.rs  version.rs  versioning.rs
src-tauri/src/models/: config.rs  divider.rs  error.rs  global.rs  instance_dto.rs  library.rs  library_dto.rs  mod_backup.rs  mod_dto.rs  paths.rs  task_status.rs  test.rs
src-tauri/src/utils/: context.rs  file.rs  icon.rs  id.rs  process.rs  thread.rs  time.rs  toml.rs  version.rs
src-tauri/tests/: library.rs  linker.rs  mod_fs.rs  version.rs
src-tauri/tests/common/: mod.rs
src/components/: app-sidebar.tsx  breadcrumb-nav.tsx  file-drop-handler.tsx  instance-switcher.tsx  library-init.tsx
src/components/dialog/: remove-mod.tsx
src/components/mod/: markdown-content.tsx  mod-card.tsx  mod-list.tsx  mod-type-badge.tsx  mod-version.tsx
src/components/mod/mod-details/: backups-tab.tsx  dependencies-tab.tsx  documentation-tab.tsx  links-tab.tsx  overview-tab.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx
src/hooks/: use-library-state.ts  use-library-switch.ts  use-library-switcher.ts  use-library.ts  use-mods.ts
src/lib/: api.ts  error.ts  fp-utils.ts  library-actions.ts  mock-data.ts  result.ts
src/routes/: $id.tsx  __root.tsx  index.tsx  mod.$id.tsx  settings.tsx
src/store/: library-actions.ts  library.ts
src/utils/: constants.ts  error.ts  format.ts  function.ts  i18n.ts  mod.ts  result.ts  router.ts  translation.ts  value.ts
