[package]
name = "shooter"
version = "0.1.0"
description = "A Tauri App"
authors = ["martes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shooter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
confy = "2.0.0"
directories = "6.0.0"
tauri-plugin-log = "2"
camino = { version = "1.2.2", features = ["serde1"] }
junction = "1.2" # Essential for Windows Junctions
sysinfo = "0.30" # For process checking
chrono = "0.4"
tokio = "1.48.0"   # For backup timestamps
toml = "0.7"
walkdir = "2"
regex = "1.10"
uuid = { version = "1.19.0", features = ["v4"] }

