[package]
name = "mod_keeper"
version = "0.1.0"
description = "A mod manager for SPT."
authors = ["martes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mod_keeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tempfile = "3"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
confy = "2.0.0"
directories = "6.0.0"
camino = { version = "1.2.2", features = ["serde1"] }
junction = "1.2" # Essential for Windows Junctions
sysinfo = "0.30" # For process checking
toml = "0.7"
walkdir = "2"
regex = "1.10"
uuid = { version = "1.19.0", features = ["v4"] }
semver = "1.0.27"
file-id = "0.2.3"
dunce = "1.0.5"
parking_lot = "0.12.5"
zip = "7.0.0"
tokio = { version = "1.49.0", features = ["macros", "time"] }
derive_more = { version = "2.1.1", features = ["display"] }
help = "0.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
tauri-plugin-dialog = "2"
base64 = "0.22"
blake3 = "1.5"
tracing-appender = "0.2.4"
tauri-plugin-log = "2"
logcall = "0.1.13"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
tempfile = "3"

